--- a/level2.html
+++ b/level2.html
@@ -12,7 +12,7 @@
 
 <canvas id="myCanvas" width="900" height="600"></canvas>
 
-<script src="./sample.js"></script>
+<script src="level2.js"></script>
 
 </body>
-</html
+</html>
