--- a/level4.html
+++ b/level4.html
@@ -12,7 +12,7 @@
 
 <canvas id="myCanvas" width="900" height="600"></canvas>
 
-<script src="./sample.js"></script>
+<script src="level4.js"></script>
 
 </body>
-</html
+</html>
