--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +13,7 @@
 
 <canvas id="myCanvas" width="900" height="600"></canvas>
 
-<script src="./sample.js"></script>
+<script src="main.js"></script>
 
 </body>
-</html
+</html>
